[gd_scene load_steps=44 format=3 uid="uid://dipw4kevbot4i"]

[ext_resource type="Script" path="res://scenes/enemy_easy.gd" id="1_aahmc"]
[ext_resource type="Texture2D" uid="uid://bupyiaxykgr8p" path="res://assets/SpecterSkeleton/Idle.png" id="2_6mta5"]
[ext_resource type="Texture2D" uid="uid://dc0pnbgfy23xw" path="res://assets/SpecterSkeleton/Attack1.png" id="2_w6r2e"]
[ext_resource type="Texture2D" uid="uid://c2gyhlo5ubume" path="res://assets/SpecterSkeleton/Attack2.png" id="3_jvde4"]
[ext_resource type="Texture2D" uid="uid://dqwwm13d4np2m" path="res://assets/SpecterSkeleton/Walk.png" id="3_kssw4"]
[ext_resource type="Texture2D" uid="uid://cj7uryo6ygg2n" path="res://assets/SpecterSkeleton/Take Hit.png" id="4_r8j7g"]
[ext_resource type="Texture2D" uid="uid://6cryb3hwdjl5" path="res://assets/SpecterSkeleton/Death.png" id="5_djwgj"]
[ext_resource type="PackedScene" uid="uid://cyb4q306lkljv" path="res://scenes/damage_box.tscn" id="8_jv57r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fraub"]
atlas = ExtResource("2_w6r2e")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttn5y"]
atlas = ExtResource("2_w6r2e")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ldq0"]
atlas = ExtResource("2_w6r2e")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t7ke"]
atlas = ExtResource("2_w6r2e")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp548"]
atlas = ExtResource("2_w6r2e")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ugko"]
atlas = ExtResource("2_w6r2e")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_byoci"]
atlas = ExtResource("2_w6r2e")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw8fd"]
atlas = ExtResource("3_jvde4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oea3y"]
atlas = ExtResource("3_jvde4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb4aw"]
atlas = ExtResource("3_jvde4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_odaid"]
atlas = ExtResource("3_jvde4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecqhs"]
atlas = ExtResource("3_jvde4")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm22v"]
atlas = ExtResource("3_jvde4")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0qmh"]
atlas = ExtResource("3_jvde4")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahsuo"]
atlas = ExtResource("4_r8j7g")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i1ef"]
atlas = ExtResource("4_r8j7g")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibs2y"]
atlas = ExtResource("5_djwgj")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3yhm"]
atlas = ExtResource("5_djwgj")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw1qr"]
atlas = ExtResource("5_djwgj")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_81ay7"]
atlas = ExtResource("5_djwgj")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_axih2"]
atlas = ExtResource("2_6mta5")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlb5j"]
atlas = ExtResource("2_6mta5")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0yar"]
atlas = ExtResource("2_6mta5")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrfwd"]
atlas = ExtResource("2_6mta5")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kpxu"]
atlas = ExtResource("4_r8j7g")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_laluq"]
atlas = ExtResource("4_r8j7g")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmtyp"]
atlas = ExtResource("4_r8j7g")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_knvbt"]
atlas = ExtResource("4_r8j7g")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_stm2u"]
atlas = ExtResource("3_kssw4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pktmg"]
atlas = ExtResource("3_kssw4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2vsl"]
atlas = ExtResource("3_kssw4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c12o"]
atlas = ExtResource("3_kssw4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_uiha0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fraub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttn5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ldq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t7ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp548")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ugko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byoci")
}],
<<<<<<< HEAD
"loop": false,
=======
"loop": true,
>>>>>>> 8d674cae0dad2a3d9df5b801d6755c34bdb96e05
"name": &"attack1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw8fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oea3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb4aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odaid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecqhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm22v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0qmh")
}],
"loop": false,
"name": &"attack2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahsuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i1ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibs2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3yhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw1qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81ay7")
}],
"loop": true,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axih2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlb5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0yar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrfwd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kpxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laluq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmtyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knvbt")
}],
"loop": true,
"name": &"take_hit",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_stm2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pktmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2vsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c12o")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b18vq"]
radius = 3.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h28h4"]
height = 208.0

[node name="EnemyEasy" type="CharacterBody2D"]
<<<<<<< HEAD
collision_layer = 2
collision_mask = 5
script = ExtResource("1_aahmc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-19, 0)
scale = Vector2(0.303333, 0.3)
sprite_frames = SubResource("SpriteFrames_uiha0")
animation = &"idle"
autoplay = "idle"

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(-17, 0)
=======
collision_layer = 4
collision_mask = 3
script = ExtResource("1_aahmc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(0.303333, 0.3)
sprite_frames = SubResource("SpriteFrames_uiha0")
animation = &"attack1"
autoplay = "idle"

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
>>>>>>> 8d674cae0dad2a3d9df5b801d6755c34bdb96e05
shape = SubResource("CapsuleShape2D_b18vq")

[node name="Detector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_h28h4")

[node name="Timer" type="Timer" parent="."]

[node name="DamageBox" parent="." instance=ExtResource("8_jv57r")]

[node name="HurtBox" parent="DamageBox" index="0"]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" parent="DamageBox/HurtBox" index="0"]
<<<<<<< HEAD
position = Vector2(-17, 0)

[node name="HitBox" parent="DamageBox" index="1"]
position = Vector2(-17, 0)
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" parent="DamageBox/HitBox" index="0"]
position = Vector2(9, 0)
=======
position = Vector2(2, 0)

[node name="HitBox" parent="DamageBox" index="1"]
position = Vector2(2, 0)
collision_layer = 0
collision_mask = 34

[node name="CollisionShape2D" parent="DamageBox/HitBox" index="0"]
position = Vector2(12, -7)
>>>>>>> 8d674cae0dad2a3d9df5b801d6755c34bdb96e05

[connection signal="sprite_frames_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_sprite_frames_changed"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_shape_entered" from="Detector" to="." method="_on_detector_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DamageBox/HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="DamageBox/HitBox" to="." method="_on_hit_box_body_exited"]

[editable path="DamageBox"]
